<resources>
    <string name="app_name">AlarmApp</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="add_alarm">등록</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD1uYBsmnuiZXbWQ-a40X4UBhH69VqgWvw</string>
    <string name="gps_active_alert_message">현재 위치 정보를 확인하기위해 GPS를 활성화 합니다. 계속하시겠습니까?</string>
    <string name="detail_title">알람 세부내용을 설정해주세요.</string>
    <string name="am_label">오전</string>
    <string name="pm_label">오후</string>
    <string name="sun_label">일</string>
    <string name="mon_label">월</string>
    <string name="tue_label">화</string>
    <string name="wed_label">수</string>
    <string name="thu_label">목</string>
    <string name="fri_label">금</string>
    <string name="sat_label">토</string>
    <string name="memo_label">Memo</string>
    <string name="map_label">Map</string>
    <string name="active_label">활성화</string>
    <string name="cancel_label">취소</string>
    <string name="passive_gps_message">GSP가 활성화 되지 않아 현재 위치정보를 가져올 수 없습니다.</string>
</resources>
