<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:toggle="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="70dp"
              android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/txt_list_alarm_am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:text="@string/am_label"/>

    <TextView
        android:id="@+id/txt_list_alarm_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toRightOf="@id/txt_list_alarm_am_pm"/>







    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_list_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@id/txt_list_alarm_am_pm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/label_day_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/switch_list_alarm"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/sat_label"/>

    <TextView
        android:id="@+id/label_day_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_sat"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/fri_label"/>

    <TextView
        android:id="@+id/label_day_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_fri"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/thu_label"/>

    <TextView
        android:id="@+id/label_day_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_thu"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/wed_label"/>

    <TextView
        android:id="@+id/label_day_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_wed"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/tue_label"/>

    <TextView
        android:id="@+id/label_day_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_tue"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/mon_label"/>

    <TextView
        android:id="@+id/label_day_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_list_alarm_am_pm"
        android:layout_toLeftOf="@id/label_day_mon"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:textColor="@color/blue"
        android:text="@string/sun_label"/>







    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#EAEAEA"
        />

</RelativeLayout>